--- a/vue-essentials/package.json
+++ b/vue-essentials/package.json
@@ -18,7 +18,8 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.2.0",
+    "vue2-animate": "^2.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
